--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>Bhishan Sah - Home</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+   <p>Bhishan sah </p>
   </body>
 </html>
