--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Bhishan Sah - Home</title>
   </head>
   <body>
-   <p>Bhishan sah </p>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </body>
 </html>
